Fix type refs in dark mode

--- a/docs/source/_static/terminal.css
+++ b/docs/source/_static/terminal.css
@@ -44,6 +44,7 @@
 
 code.xref {
   border-bottom: none;
+  background-color: var(--code-bg-color);
 }
 
 a.reference:hover {
